--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Expose as artifact
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ step.getManualLicenseFile.outputs.filePath }}
-          path: ${{ step.getManualLicenseFile.outputs.filePath }}
+          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
 
