--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -1,14 +1,11 @@
-name: Build WebGL 😎
+name: Build Android 🫑
 
 on: 
-  push:
-    branches:
-      - master
   workflow_dispatch: {}
 
 jobs:
   build:
-    name: Build my project ✨
+    name: Build Android 🫑
     runs-on: ubuntu-latest
     steps:
       # Checkout
@@ -31,19 +28,16 @@ jobs:
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
-          targetPlatform: WebGL
+          targetPlatform: Android
           unityVersion: 2021.1.28f1
-
-      # GithubPages
-      - name: Github Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.7
-        with:
-          branch: gh-pages
-          folder: build
+          androidKeystoreName: project.keystore
+          androidKeystoreBase64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+          androidKeystorePass: ${{ secrets.ANDROID_KEYSTORE_PASS }}
+          androidKeyaliasName: ${{ secrets.ANDROID_KEYALIAS_NAME }}
+          androidKeyaliasPass: ${{ secrets.ANDROID_KEYALIAS_PASS }}
 
       # Output
       - uses: actions/upload-artifact@v2
         with:
           name: Build
           path: build
-
