debug or ios build

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -1,11 +1,11 @@
-name: Build Android 🫑
+name: Build Android 🤖
 
 on: 
   workflow_dispatch: {}
 
 jobs:
   build:
-    name: Build Android 🫑
+    name: Build Android 🤖
     runs-on: ubuntu-latest
     steps:
       # Checkout
