--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   buildUnity:
     name: Build Unity for iOS 🍎
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       # Checkout
