--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Download xcode project
         uses: actions/download-artifact@v2
         with:
-          name: ios
+          name: Build
           path: build/iOS
 
       # Debug
